@@ -1243,7 +1243,7 @@ public class FHIRPathEngine {
       if (l.hasType("string") && r.hasType("string"))
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) < 0);
       else if ((l.hasType("integer") || l.hasType("decimal")) && (r.hasType("integer") || r.hasType("decimal")))
-        return makeBoolean(new Double(l.primitiveValue()) < new Double(r.primitiveValue()));
+        return makeBoolean(Double.valueOf(l.primitiveValue()) < Double.valueOf(r.primitiveValue()));
       else if ((l.hasType("date", "dateTime", "instant")) && (r.hasType("date", "dateTime", "instant")))
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) < 0);
       else if ((l.hasType("time")) && (r.hasType("time")))
@@ -1267,7 +1267,7 @@ public class FHIRPathEngine {
       if (l.hasType("string") && r.hasType("string"))
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) > 0);
       else if ((l.hasType("integer", "decimal", "unsignedInt", "positiveInt")) && (r.hasType("integer", "decimal", "unsignedInt", "positiveInt")))
-        return makeBoolean(new Double(l.primitiveValue()) > new Double(r.primitiveValue()));
+        return makeBoolean(Double.valueOf(l.primitiveValue()) > Double.valueOf(r.primitiveValue()));
       else if ((l.hasType("date", "dateTime", "instant")) && (r.hasType("date", "dateTime", "instant")))
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) > 0);
       else if ((l.hasType("time")) && (r.hasType("time")))
@@ -1291,7 +1291,7 @@ public class FHIRPathEngine {
       if (l.hasType("string") && r.hasType("string"))
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) <= 0);
       else if ((l.hasType("integer", "decimal", "unsignedInt", "positiveInt")) && (r.hasType("integer", "decimal", "unsignedInt", "positiveInt")))
-        return makeBoolean(new Double(l.primitiveValue()) <= new Double(r.primitiveValue()));
+        return makeBoolean(Double.valueOf(l.primitiveValue()) <= Double.valueOf(r.primitiveValue()));
       else if ((l.hasType("date", "dateTime", "instant")) && (r.hasType("date", "dateTime", "instant")))
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) <= 0);
       else if ((l.hasType("time")) && (r.hasType("time")))
@@ -1317,7 +1317,7 @@ public class FHIRPathEngine {
       if (l.hasType("string") && r.hasType("string"))
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) >= 0);
       else if ((l.hasType("integer", "decimal", "unsignedInt", "positiveInt")) && (r.hasType("integer", "decimal", "unsignedInt", "positiveInt")))
-        return makeBoolean(new Double(l.primitiveValue()) >= new Double(r.primitiveValue()));
+        return makeBoolean(Double.valueOf(l.primitiveValue()) >= Double.valueOf(r.primitiveValue()));
       else if ((l.hasType("date", "dateTime", "instant")) && (r.hasType("date", "dateTime", "instant")))
         return makeBoolean(l.primitiveValue().compareTo(r.primitiveValue()) >= 0);
       else if ((l.hasType("time")) && (r.hasType("time")))
